Added support for SecretManager (Google Login) Google Login now working. Apply database migration when you try. Will also have to add some code to the SecretJson, Ask for it when you do.

--- a/src/CineplexMovieComplex/appsettings.json
+++ b/src/CineplexMovieComplex/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\ProjectsV13;Database=wdt_a2_james;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Whoops let's get rid of this!"
   },
   "Logging": {
     "IncludeScopes": false,
