--- a/src/CineplexMovieComplex/Properties/launchSettings.json
+++ b/src/CineplexMovieComplex/Properties/launchSettings.json
@@ -3,17 +3,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50286/",
-      "sslPort": 0
+      "applicationUrl": "https://localhost:44301/",
+      "sslPort": 44301
     }
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "commandName": "IISExpress",
+        "launchBrowser": true,
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        }
     },
     "CineplexMovieComplex": {
       "commandName": "Project",
