--- a/src/CineplexMovieComplex/project.json
+++ b/src/CineplexMovieComplex/project.json
@@ -42,7 +42,8 @@
             "version": "1.0.0-preview2-final",
             "type": "build"
         },
-        "Microsoft.AspNet.Web.Optimization": "1.1.3"
+        "Microsoft.AspNet.Web.Optimization": "1.1.3",
+        "Microsoft.AspNetCore.Authentication.Google": "1.1.2"
     },
 
   "tools": {
