--- a/src/CineplexMovieComplex/project.json
+++ b/src/CineplexMovieComplex/project.json
@@ -1,5 +1,5 @@
 {
-  "userSecretsId": "aspnet-CineplexMovieComplex-86bca1dc-16ae-4ae6-bc22-2f8dffcae438",
+    "userSecretsId": "aspnet-CineplexMovieComplex-86bca1dc-16ae-4ae6-bc22-2f8dffcae438",
 
     "dependencies": {
         "Microsoft.AspNetCore.Session": "1.1.1",
@@ -43,43 +43,46 @@
             "type": "build"
         },
         "Microsoft.AspNet.Web.Optimization": "1.1.3",
-        "Microsoft.AspNetCore.Authentication.Google": "1.1.2"
+        "Microsoft.AspNetCore.Authentication.Google": "1.1.2",
+        "dotnet-test-xunit": "2.2.0-preview2-build1029",
+        "xunit": "2.2.0"
     },
 
-  "tools": {
-    "BundlerMinifier.Core": "2.0.238",
-    "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
-    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
-    "Microsoft.Extensions.SecretManager.Tools": "1.0.0-preview2-final",
-    "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
-      "version": "1.0.0-preview2-final",
-      "imports": [
-        "portable-net45+win8"
-      ]
-    }
-  },
+    "tools": {
+        "BundlerMinifier.Core": "2.0.238",
+        "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
+        "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+        "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
+        "Microsoft.Extensions.SecretManager.Tools": "1.0.0-preview2-final",
+        "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
+            "version": "1.0.0-preview2-final",
+            "imports": [
+                "portable-net45+win8"
+            ]
+        }
+    },
 
-  "frameworks": {
-    "net461": { }
-  },
+    "frameworks": {
+        "net461": {}
+    },
 
-  "buildOptions": {
-    "emitEntryPoint": true,
-    "preserveCompilationContext": true
-  },
+    "buildOptions": {
+        "emitEntryPoint": true,
+        "preserveCompilationContext": true
+    },
 
-  "publishOptions": {
-    "include": [
-      "wwwroot",
-      "**/*.cshtml",
-      "appsettings.json",
-      "web.config"
-    ]
-  },
+    "publishOptions": {
+        "include": [
+            "wwwroot",
+            "**/*.cshtml",
+            "appsettings.json",
+            "web.config"
+        ]
+    },
 
-  "scripts": {
-    "prepublish": [ "bower install", "dotnet bundle" ],
-    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
-  }
+    "scripts": {
+        "prepublish": [ "bower install", "dotnet bundle" ],
+        "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
+    },
+    "testRunner": "xunit"
 }
