--- a/src/CineplexMovieComplex/project.json
+++ b/src/CineplexMovieComplex/project.json
@@ -45,7 +45,8 @@
         "Microsoft.AspNet.Web.Optimization": "1.1.3",
         "Microsoft.AspNetCore.Authentication.Google": "1.1.2",
         "dotnet-test-xunit": "2.2.0-preview2-build1029",
-        "xunit": "2.2.0"
+        "xunit": "2.2.0",
+        "Microsoft.EntityFrameworkCore.InMemory": "1.0.1"
     },
 
     "tools": {
